--- a/assets/projects/webschool/professor/turmas.html
+++ b/assets/projects/webschool/professor/turmas.html
@@ -39,7 +39,15 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Minhas turmas</strong><p/>
-                {TURMAS}
+                    Física, 2º Série <p/>
+                    <a href='turma.html' class='btn btn-sm btn-primary' id='btn_disciplina' >
+                        <span class='glyphicon glyphicon-eye-open'></span> Visualizar</a>
+                        <br/>Aluno 1
+                        <br/>Aluno 2
+                        <br/>Aluno 3
+                        <br/>Aluno 4
+                        <br/>Aluno 5
+                        <br/>Aluno 6
             </div>
         </div>
 
