--- a/assets/projects/webschool/professor/diariodeclasse.html
+++ b/assets/projects/webschool/professor/diariodeclasse.html
@@ -4,83 +4,47 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/css.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <script src="../../includes/js/jquery.js"></script>
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/css.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <script src="../includes/js/jquery.js"></script>
         <script>
-            function pesquisarFrequencia(mes, ano, turma, disc, context) {
-                $.ajax({
-                    type: "POST",
-                    url: "../../professor/pesquisarFrequencia",
-                    data:'mes='+mes+'&ano='+ano+'&turma='+turma+'&disc='+disc+'&context='+context,
-                    success: function(data ){
-                        $("#search").removeClass('disabled');
-                        $("#result").html(data);
-                    }
-                });
+            function mockData() {
+                $("#search").removeClass('disabled');
+                $("#result").html("<p/><table style='margin-left: auto; margin-right: auto; font-size: 13;' class='table table-striped table-responsive'><thead class='thead-dark'><tr><th scope='col'>  </th><th scope='col'>01</th><th scope='col'>02</th><th scope='col'>03</th><th scope='col'>04</th><th scope='col'>05</th><th scope='col'>06</th><th scope='col'>07</th><th scope='col'>08</th><th scope='col'>09</th><th scope='col'>10</th><th scope='col'>11</th><th scope='col'>12</th><th scope='col'>13</th><th scope='col'>14</th><th scope='col'>15</th><th scope='col'>16</th><th scope='col'>17</th><th scope='col'>18</th><th scope='col'>19</th><th scope='col'>20</th><th scope='col'>21</th><th scope='col'>22</th><th scope='col'>23</th><th scope='col'>24</th><th scope='col'>25</th><th scope='col'>26</th><th scope='col'>27</th><th scope='col'>28</th><th scope='col'>29</th><th scope='col'>30</th></tr></thead><tbody><tr><td>Aluno 1</td><td><a href='#' id='presenca-2020_04_01_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_01_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_02_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_02_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_03_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_03_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_04_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_04_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_05_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_05_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_06_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_06_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_07_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_07_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_08_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_08_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_09_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_09_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_10_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_10_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_11_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_11_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_12_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_12_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_13_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_13_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_14_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_14_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_15_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_15_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_16_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_16_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_17_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_17_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_18_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_18_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_19_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_19_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_20_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_20_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_21_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_21_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_22_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_22_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_23_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_23_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_24_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_24_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_25_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_25_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_26_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_26_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_27_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_27_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_28_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_28_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_29_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_29_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td><td><a href='#' id='presenca-2020_04_30_1035_10_3' class='alterar-presenca'><span class='glyphicon glyphicon-remove'></span></a> <a href='#' id='comentario-2020_04_30_1035_10_3' class='comentarios' data-toggle='modal' data-target='#modalExemplo' ><span class='glyphicon glyphicon-comment'></span></a></td></tr></tbody></table>");
             }
 
             function alterarFrequencia(dados) {
-                $.ajax({
-                    type: "POST",
-                    url: "../../professor/alterarFrequencia",
-                    data: { dados : dados},
-                    success: function(data){
-                        $("#"+dados).html(data);
-                    }
-                });
+
             }
 
             function visualizarComentarios(dados) {
-                $.ajax({
-                    type: "POST",
-                    url: "../../professor/visualizarComentarios",
-                    data: { dados : dados},
-                    success: function(data){
-                        $("#tabela-comentarios tbody").html(data);
-                    }
-                });
+ 
             }
 
             function deletarComentario(comentario) {
-                $.ajax({
-                    type: "DELETE",
-                    url: "../comentario/" + comentario,
-                    success: function(data){
-                        $('#row-comentario-'+comentario).fadeOut(400, function(){
-                            remove();
-                        });
-                    }
-                });
+             
             }
 
             function deletarArquivo(arquivo) {
-                $.ajax({
-                    type: "DELETE",
-                    url: "../arquivo/" + arquivo,
-                    success: function(data){
-                        $('#cell-file-head-'+arquivo).text('Essa observação não contem arquivos anexados');
-                        $('#cell-file-remove-'+arquivo).text('');
-                    }
-                });
+               
             }
 
             $(document).on('click', '.alterar-presenca', function(){
-                alterarFrequencia(this.id);
+                alterarFrequencia();
             });
 
             $(document).on('click', '.comentarios', function(){
-                visualizarComentarios(this.id);
-                $("#dado").val(this.id);
+                visualizarComentarios();
+                $("#dado").val();
             });
 
             $(document).on('click', '.deletar-comentario', function(){
-               deletarComentario(this.id); 
+               deletarComentario(); 
             });
 
             $(document).on('click', '.deletar-arquivo', function(){
-               deletarArquivo(this.id); 
+               deletarArquivo(); 
             });
 
             $(document).on('click', '#erase-fields', function(){    
@@ -91,8 +55,8 @@
 
             $(document).ready(function(){
                 var date = new Date();
-                mes = date.getMonth()+1;
-                ano = date.getFullYear();
+                mes = 4;
+                ano = 2020;
 
                 $("#ano option").each(function(){
                     if ($(this).val() == ano) {
@@ -108,9 +72,9 @@
 
                 $("#search").click(function(){
                     if ($("#search").hasClass('disabled') === false) {
-                        pesquisarFrequencia($("#mes").val(), $("#ano").val(), $("#turma").val(), $("#disc").val(), $("#context").val());
                         $("#search").addClass('disabled');
                         $("#result").html('Pesquisando');
+                        setTimeout(mockData, 2000);
                     }
                 });
 
@@ -120,19 +84,6 @@
 
                 $("#form-comentario").on('submit', (function(e){
                     e.preventDefault();
-                    $.ajax({
-                        type: 'POST',
-                        url: '../comentario',
-                        data: new FormData(this),
-                        contentType: false,
-                        cache: false,
-                        processData:false,
-                        beforeSend: function(){
-                        },
-                        success: function(response){ 
-                            $("#tabela-comentarios tbody").append(response);
-                        }
-                    });
                 }));
             });
         </script>
@@ -145,7 +96,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Logado como {LOGADO}
+                            Logado como Professor
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html">Home</a>
@@ -238,6 +189,12 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <tr>
+                                        <td>Respondeu professor de forma grosseira</td><td colspan='2'>Essa observação não contem arquivos anexados</td><td>Deletar</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Fez gesto desrespeitoso para o professor</td><td>Arquivo anexado</td><td>Link para deletar arquivo</td><td>Deletar</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
