--- a/assets/projects/webschool/professor/turma.html
+++ b/assets/projects/webschool/professor/turma.html
@@ -3,9 +3,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../../includes/css/glyphicons.css" rel="stylesheet">
-        <link href="../../includes/css/navbar.css" rel="stylesheet">
-        <link href="../../includes/css/css.css" rel="stylesheet">
+        <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/navbar.css" rel="stylesheet">
+        <link href="../includes/css/css.css" rel="stylesheet">
         <style>
             #btn_diario {
                 text-decoration: none;
@@ -60,7 +60,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Logado como {LOGADO}
+                            Logado como Professor
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html">Home</a>
@@ -80,7 +80,71 @@
 
                 <strong>Detalhes da turma</strong> <p/>
                 
-                {DETALHES}
+                Física, 2º Série <a href='diariodeclasse.html' class='btn btn-sm btn-primary' id='btn_diario'><span class='glyphicon glyphicon-pencil'></span> Diário de classe</a><p/>
+                <table style='margin-left: auto; margin-right: auto; font-size: 13;' class='table table-sm table-hover table-striped'>
+        <thead><tr><th></th><th>Nota 1</th><th>Rec. 1</th><th>Nota 2:</th><th>Rec. 2</th><th>Nota 3</th><th>Rec. 3</th><th>Nota 4</th><th>Rec. 4</th></tr></thead>
+        <tbody>
+            <tr><td>Aluno 1</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+            <tr><td>Aluno 2</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+            <tr><td>Aluno 3</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+            <tr><td>Aluno 4</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+            <tr><td>Aluno 5</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+            <tr><td>Aluno 6</td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec1'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota2'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec2'>7</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota3'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec3'>2</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_nota4'>5</a> </td>
+            <td> <a href='#' class='nota' data-toggle='modal' data-target='#modalExemplo' id='id-1035_10_3_rec4'>3</a> </td>
+            </tr>
+        </tbody></table>
 
             </div>
         </div>
