--- a/assets/projects/webschool/responsavel/index.html
+++ b/assets/projects/webschool/responsavel/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="home">webSchool</a>
+            <a class="navbar-brand" href="index.html">webSchool</a>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
@@ -19,11 +19,11 @@
                             Logado como Responsavel
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../perfil">Perfil</a>
+                            <a class="dropdown-item" href="../perfil.html">Perfil</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
-                            <a class="dropdown-item" href="../logout">Sair</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
@@ -36,8 +36,8 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <a href="alunos.html" class="btn btn-light btn btn-block">Meus Alunos</a>
-                <a href="../perfil" class="mobile btn btn-dark btn btn-block" >Meu Perfil</a>
-                <a href="../logout" class="mobile btn btn-danger btn btn-block" >Sair</a>
+                <a href="../perfil.html" class="mobile btn btn-dark btn btn-block" >Meu Perfil</a>
+                <a href="../index.html" class="mobile btn btn-danger btn btn-block" >Sair</a>
                 <!-- <a href="solicitacoes.php">Fazer solicitações ao administrador</a><br/> -->
             </div>
         </div>
