--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="#">
-                                <img src="assets/images/logo_.png" alt="Paul Richard, desenvolvedor web">
+                                <!-- <img src="assets/images/logo_.png" alt="Paul Richard, desenvolvedor web"> -->
+                                Paul Richard, desenvolvedor web
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarEight" aria-controls="navbarEight" aria-expanded="false" aria-label="Toggle navigation">
@@ -92,7 +93,7 @@
                                         <a class="page-scroll" href="#tech">TECNOLOGIAS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#produtos">Portfolio</a>
+                                        <a class="page-scroll" href="#produtos">PORTFOLIO</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#portfolio">PORTFOLIO</a>
@@ -228,12 +229,12 @@
     
     <!--====== ABOUT PART START ======-->
 
-    <section id="about" class="about-area">
+    <section id="about" class="call-action-area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8">
                     <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
-                        <img src="assets/images/services_.png" alt=" ">
+                        <!-- <img src="assets/images/services_.png" alt=" "> -->
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Paul Richard, desenvolvedor web</h4>
@@ -246,10 +247,10 @@
                 <div class="col-lg-12">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="about-icon">
-                            <img src="assets/images/icon-1zzz.png" alt="Uma foto minha">
+                            <!-- <img src="assets/images/icon-1zzz.png" alt="Uma foto minha"> -->
                         </div>
                         <div class="about-content media-body">
-                            <h4 class="about-title">Paul Richard</h4>
+                            <!-- <h4 class="about-title">Paul Richard</h4> -->
                             <p class="text">Um pouco sobre mim.</p>
                         </div>
                     </div> <!-- single about -->
@@ -265,7 +266,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8">
                     <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
-                        <img src="assets/images/services_.png" alt=" ">
+                        <!-- <img src="assets/images/services_.png" alt=" "> -->
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Tecnologias</h4>
@@ -334,8 +335,6 @@
             </div> 
         </div> 
     </section>
-    
- 
 
     <!--====== ABOUT PART ENDS ======-->
 
@@ -366,7 +365,7 @@
                 </div>
             </div>
             -->
-            <div class="row grid justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-6 branding-3 planning-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
                         <!-- <div class="portfolio-image">
