--- a/index.html
+++ b/index.html
@@ -343,11 +343,14 @@
     <section id="produtos" class="produtos-area">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section-title text-center pb-20">
-                        <h3 class="title">Portfolio</h3>
-                        <p class="text">Alguns exemplos de sistemas web.</p>
-                    </div> 
+                <div class="col-xl-6 col-lg-8">
+                    <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
+                        <!-- <img src="assets/images/services_.png" alt=" "> -->
+                    </div>
+                    <div class="section-title text-center mt-30 pb-40">
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Portfolio</h4>
+                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Alguns exemplos de sistemas web.</p>
+                    </div> <!-- section title -->
                 </div>
             </div>
             <!--
@@ -667,10 +670,13 @@
     <section id="contact" class="contact-area">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section-title text-center pb-20">
-                        <h3 class="title">Vamos conversar!</h3>
-                        <p class="text">Entre em contato e faça sua proposta!</p>
+                <div class="col-xl-6 col-lg-8">
+                    <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
+                        <!-- <img src="assets/images/services_.png" alt=" "> -->
+                    </div>
+                    <div class="section-title text-center mt-30 pb-40">
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Vamos conversar!</h4>
+                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Entre em contato e faça sua proposta!</p>
                     </div> <!-- section title -->
                 </div>
             </div> 
