--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <!-- <img src="assets/images/services_.png" alt=" "> -->
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
-                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Tecnologias</h4>
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s" style="font-weight: 500;">Tecnologias</h4>
                         <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Algumas das tecnologias com as quais eu trabalho.</p>
                     </div> <!-- section title -->
                 </div>
