--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         </div>
                         <div class="about-content media-body">
                             <!-- <h4 class="about-title">Paul Richard</h4> -->
-                            <p class="text">Um pouco sobre mim.</p>
+                            <p class="text"> Desenvolvedor de software com 10 anos de experiência entre projetos pessoais e acadêmicos. Conhecimento nas linguagens PHP (framework Laravel e PHP padrão), com noções de design e usabilidade (CSS e jQuery), SQL e Python, e desenvolvimento de jogos com Unity 3D engine e na linguagem Lua (computadores fantasia como Pico-8 e TIC-80). Tenho facilidade de entender sistemas, processos e metodologias, ótima habilidade de comunicação, e gosto de aprender soluções novas assim como aperfeiçoar soluções antigas. </p>
                         </div>
                     </div> <!-- single about -->
                 </div>
@@ -685,8 +685,9 @@
                     <div class="contact-two mt-50 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
                         <ul class="contact-info">
                             <li><i class="lni-money-location"></i> Campinas, São Paulo, Brasil</li>
-                            <li><i class="lni-phone-handset"></i> +55 19 000000000</li>
-                            <li><i class="lni-envelope"></i> mail@mail.com</li>
+                            <li><i class="lni-money-location"></i> Contate-me através do <a href='https://www.linkedin.com/in/paul-richard-pereira-martins-dos-anjos-4b1a2397/'>Linkedin</a></li>!
+                            <!-- <li><i class="lni-phone-handset"></i> +55 19 000000000</li> -->
+                            <!-- <li><i class="lni-envelope"></i> mail@mail.com</li> -->
                         </ul>
                     </div> 
                 </div>
