--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">Portfolio</h4>
-                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Alguns exemplos de sistemas web.</p>
+                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Alguns exemplos de sistemas web.<br><small>Essas páginas são apenas páginas de exemplo, e não os sistemas funcionando de fato. </small></p>
                     </div> <!-- section title -->
                 </div>
             </div>
@@ -685,7 +685,7 @@
                     <div class="contact-two mt-50 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
                         <ul class="contact-info">
                             <li><i class="lni-money-location"></i> Campinas, São Paulo, Brasil</li>
-                            <li><i class="lni-money-location"></i> Contate-me através do <a href='https://www.linkedin.com/in/paul-richard-pereira-martins-dos-anjos-4b1a2397/'>Linkedin</a></li>!
+                            <li><i class="lni-money-location"></i> Contate-me através do <a href='https://www.linkedin.com/in/paul-richard-pereira-martins-dos-anjos-4b1a2397/'>Linkedin</a>!</li>
                             <!-- <li><i class="lni-phone-handset"></i> +55 19 000000000</li> -->
                             <!-- <li><i class="lni-envelope"></i> mail@mail.com</li> -->
                         </ul>
